# bioinformatics_active_learning_approach

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md  pyproject.toml
dev/BioLib/: Manifest.toml  Project.toml
dev/BioLib/src/: BioLib.jl  eight.jl  nine.jl  ten.jl
eight/: 1.jl  4.py  clustering.py  eight_lib.jl
fasta_parser/parsers/: fasta_parser.py
fasta_parser/tests/: fasta_parser_test.py
five/: 5_1.py  5_10.py  5_11.py  5_12.py  5_13.py  5_14.py  5_2.py  5_3.py  5_4.py  5_5.py  5_6.py  5_7.py  5_8.py  5_9.py  dp_lib.py
four/: 4_1.py  4_2.py  4_cs_ex_1.py  four_lib.py  test_4_3.py  test_4_4.py  test_4_6.py  test_4_7.py
nine/: runners.jl
one/: common_functions.py  cs_excercise.py  find_clumps.py  freq_words.py  freq_words_with_mismatches.py  pattern_count.py  reverse_complement.py  skew.py
seven/: 7_1.py  7_2.py  7_3.py  7_4.py  7_5.py  7_6.py  7_7.py  7_8.py  7_9.py  tree_lib.py
six_v1/: 6_1.py  6_2.py  6_3.py  6_4.py  comb_alg.py  cs_1.py  cs_2.py  cs_3.py  cs_4.py  cs_5.py  cs_6.py
ten/: ten_runners.jl
three/: grph_lib.py  string_composition.py  string_rec.py  test_circular_string.py  test_contig.py  test_debrujin.py  test_debrujin2.py  test_debrujin_path.py  test_debrujin_path2.py  test_euler_cycle.py  test_euler_path.py  test_overlap_graph.py
two/: motif_enumeration.py  motif_lib.py  test_gibbs_sampling_motif.py  test_greedy_search.py  test_median_string.py  test_most_probable_k_mer.py  test_profile_mat.py  test_randomized_motif.py
