[tool.poetry]
name = "one"
version = "0.1.0"
description = ""
authors = ["Manshilin Oleg <manshilin.o@gmail.com>"]
license = "AGPLV3"

[tool.poetry.dependencies]
python = "3.10.5"
numba = "^0.55.1"
numpy = "^1.21"
scipy = "^1.7"
pyright = "^1.1.248"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
