[tool.poetry]
name = "one"
version = "0.1.0"
description = ""
authors = ["Manshilin Oleg <manshilin.o@gmail.com>"]
license = "AGPLV3"

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.57"
numpy = "^1.23"
scipy = "^1.9"
pyright = "^1"
tqdm = "^4"
pip = "^23"

[tool.poetry.dev-dependencies]
ipython = "^8"
pytest = "^7"
black = "^22"
flake8 = "^4"
debugpy = "^1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["one", "two", "three", "four", "five", "six_v1", "seven", "eight", "fasta_parser"]
exclude = [ "input",
            "**/__pycache__",
]
#ignore = ["src/oldstuff"]
#defineConstant = { DEBUG = true }
#stubPath = "src/stubs"
#venv = "env367"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

#executionEnvironments = [
#  { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ] },
#  { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#  { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
#  { root = "src" }
#]
